hphp/hack/test/pocket_universes/naming/traits.bad.php
<?hh
trait MyTrait {
  enum E {
    case type T;
  }
}

trait MyTrait2 {
  enum E {
    case string v;
  }
}
